Fix TelecomReader